src/test/deca/context/invalid/Class_wrong8.deca
// action n'est pas un constructeur

// Date: 20.01.2022

class A{

    int entier;

    void A (int e){
        this.entier = e;
    }

    void action (){
        this.e = this.e+1;
    }
}


{
A a = new action();
B.action();
println("ben non");
}